feat: adicionando rodapé

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
   </main>
 
   <footer>
-    <p></p>
+    <p>Desenvolvimento por LH Games</p> 
+    djfhnvoizcn   
   </footer>
 
   <button id="voltar-topo" type="button" class="btn btn-outline-primary" onclick="topo()">&uarr; Voltar ao topo</button>
