feat: adcionando cabeçalho

--- a/login.html
+++ b/login.html
@@ -13,7 +13,28 @@
 
 <body>
     <header>
-        
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html"><img src="img/logo.png"></a>        
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" href="#">Promoções</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="#">Console</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="#">Jogos</a>
+                  </li>                           
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+              </div>
+            </div>
+          </nav>
     </header>
 
     <main>
