--- a/index.html
+++ b/index.html
@@ -18,7 +18,31 @@
 
 <body>
   <header>
-    
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img src="img/logo.png"></a>        
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Promoções</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Console</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Jogos</a>
+            </li>            
+            <li class="nav-item">
+              <a class="nav-link active" href="login.html">>>Login<<</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
+          </form>
+        </div>
+      </div>
+    </nav>
   </header>
 
   <main>
@@ -43,7 +67,6 @@
 
   <footer>
     <p>Desenvolvimento por LH Games</p> 
-    djfhnvoizcn   
   </footer>
 
   <button id="voltar-topo" type="button" class="btn btn-outline-primary" onclick="topo()">&uarr; Voltar ao topo</button>
