feat: adicionando  section-vendidos

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <img src="img/banner3.PNG" class="d-block w-100" alt="Várias novidades de produtos">
           </div>
         </div>
-        
+
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
@@ -74,10 +74,39 @@
         </button>
       </div>
     </section>
+
     <section id="section-vendidos" class="container-fluid">
 
       <h2>OS MAIS VENDIDOS</h2>
 
+      <div class="card-group">
+        <div class="card">
+          <img src="img/jogo1.PNG" class="card-img-top" alt="Descrição da foto">
+          <div class="card-body">
+          <h5 class="card-title">jogo 1</h5>
+          <p class="card-text">Jogo do ano</p>
+          <p class="preco">RS 182,00</p>
+          <a class="btn btn-primary" href="" role="button">Comprar</a>
+        </div>
+
+        <div class="card">
+          <img src="img/jogo2.PNG" class="card-img-top" alt="Descrição da foto">
+          <div class="card-body">
+          <h5 class="card-title">jogo 2</h5>
+          <p class="card-text">Jogos top de linha</p>
+          <p class="preco">RS 152,00</p>
+          <a class="btn btn-primary" href="" role="button">Comprar</a>
+        </div>
+
+        <div class="card">
+          <img src="img/jogo3.PNG" class="card-img-top" alt="Descrição da foto">
+          <div class="card-body">
+          <h5 class="card-title">jogo 3</h5>
+          <p class="card-text">Melhor de todos</p>
+          <p class="preco">RS 172,00</p>
+          <a class="btn btn-primary" href="" role="button">Comprar</a>
+        </div>
+      </div>
      
     </div>
     </section>
